--- a/02 ε-Greedy算法.ipynb
+++ b/02 ε-Greedy算法.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `Bandit 问题`的定义\n",
+    "### 2.3 `Bandit 问题`的定义\n",
     "\n",
     "Bandit 问题的抽象描述如下：\n",
     "\n",
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 epsilon-Greedy算法的应用\n",
+    "### 2.4 epsilon-Greedy算法的应用\n",
     "\n",
     "接下来我们进行进一步的定义，以方便使用python代码进行编写。\n",
     "\n",
@@ -1077,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
