--- a/02-academic-intro/01 introduction.ipynb
+++ b/02-academic-intro/01 introduction.ipynb
@@ -87,28 +87,48 @@
     "\n",
     "奖励如何产生，有以下几种方式：\n",
     "\n",
-    "+ \n",
+    "+ **独立同分布奖励**\n",
     "\n",
-    "+ \n",
+    "    每只臂的奖励是独立于固定分布的，这取决于臂，而不是轮次$t$。\n",
     "\n",
-    "+ \n",
+    "+ **对抗性奖励**\n",
     "\n",
-    "+ "
+    "    奖励可以是任意的，就好像它们是由试图愚弄算法的“对手（adversary）”选择的。对手可能无视算法的选择（oblivious），或者对算法的选择是自适应的（adaptive）。\n",
+    "\n",
+    "+ **被限制的对手**\n",
+    "\n",
+    "    奖励是由对手选择的，该对手受到一些限制，例如，每只臂的奖励从一轮到另一轮不能有太大变化，或者每只臂的奖励最多只能变化几次，或者奖励的总变化是有上限的。\n",
+    "\n",
+    "+ **随机过程奖励**\n",
+    "\n",
+    "    决定奖励的臂的状态，随着时间的推移，演变为一个随机过程（random process），例如马尔可夫链。在特定回合中的状态转换可能取决于算法是否选择了臂。"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1.3 上下文\n",
+    "\n",
+    "算法在选择行动之前可能会观察一些上下文。这样的上下文通常包含当前用户的已知属性，并允许进行个性化操作。\n",
+    "\n",
+    "![image-20230114092934553](https://note-image-1307786938.cos.ap-beijing.myqcloud.com/typora/%20image-20230114092934553.png)\n",
+    "\n",
+    "现在，奖励取决于环境和选择的臂。因此，该算法的目标是找到将上下文映射到臂的最佳策略（policy）。"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 二、应用领域\n",
+    "\n",
+    "MAB应用在各种领域，举例如下：\n",
+    "\n",
+    "![image-20230114094637869](https://note-image-1307786938.cos.ap-beijing.myqcloud.com/typora/%20image-20230114094637869.png)"
+   ]
   }
  ],
  "metadata": {
