--- a/02-academic-intro/03 Thompson Sampling1.ipynb
+++ b/02-academic-intro/03 Thompson Sampling1.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
     }
    ],
    "source": [
-    "def plotCompara2():\n",
+    "def plotCompare2():\n",
     "    probs = [0.9,0.8,0.7]\n",
     "    n_steps = 1000\n",
     "    N_JOBS = 200\n",
@@ -518,7 +518,7 @@
     "       + gg.scale_colour_brewer(name='agent', type='qual', palette='Set1'))\n",
     "    print(p)\n",
     "\n",
-    "plotCompara2()"
+    "plotCompare2()"
    ]
   },
   {
@@ -555,7 +555,7 @@
     }
    ],
    "source": [
-    "def plotCompara3():\n",
+    "def plotCompare3():\n",
     "    n_steps = 1000\n",
     "    N_JOBS = 200\n",
     "\n",
@@ -595,7 +595,7 @@
     "       + gg.scale_colour_brewer(name='agent', type='qual', palette='Set1'))\n",
     "    print(p)\n",
     "\n",
-    "plotCompara3()"
+    "plotCompare3()"
    ]
   },
   {
