--- a/02-academic-intro/abandomed.ipynb
+++ b/02-academic-intro/abandomed.ipynb
@@ -189,16 +189,89 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "在上例的基础上，让 $\\theta_e$ 是独立的和对数高斯分布的，参数为 $\\mu_e$ 和 $\\sigma_e^2$，让观察值(observation)特征化为：\n",
+    "$$\n",
+    "y_{t,e} = \\zeta_{t,e} \\eta_t \\nu_{t,\\ell(e)} \\theta_e\n",
+    "$$\n",
+    "其中，每个 $\\zeta_{t,e}$ 代表与边 $e$ 相关的特殊因子，$\\eta_t$ 代表所有边共同的因子，$\\ell(e)$表示边$e$是否位于`binomial bridge`的下半部分。而 $\\nu_{t,0}$ 和  $\\nu_{t,1}$ 分别代表对上半部和下半部的边共同有影响的因子。 我们认为每个$\\zeta_{t,e}$，$\\eta_t$， $\\nu_{t,0}$ 和 $\\nu_{t,1}$都是独立的对数高斯分布，参数为 $-\\tilde{\\sigma}^2/6$ 和 $\\tilde{\\sigma}^2/3$。 参数$\\zeta_{t,e}$, $\\eta_t$, $\\nu_{t,0}$ 和 $\\nu_{t,1}$的分布是已知的，只有对应于每个边的参数 $\\theta_e$ 必须通过实验学习。鉴于这些参数，$y_{t,e} | \\theta$ 的[边缘分布](https://baike.baidu.com/item/%E8%BE%B9%E7%BC%98%E5%88%86%E5%B8%83/15571865?fromModule=search-result_lemma)与2.2完全相同，尽管联合分布 $y_t | \\theta$ 不同。\n",
+    "\n",
+    "共同因子诱发了`binomial bridge`中遍历时间之间的相关性。$\\eta_t$ 代表了影响各地交通状况的随机事件，如当天的天气。而$nu_{t,0}$和$nu_{t,1}$则分别反映了只对一半的边的交通状况有影响的事件。各自反映了只对二项式桥的一半边缘的交通状况有影响的事件。**尽管在先验条件下，边的平均遍历时间是独立的，但相关的观察结果会引起后验分布中的依赖性**。\n",
+    "\n",
+    "共轭性质（Conjugacy properties）再次促进了后验参数的高效更新，让 $\\phi, z_t \\in \\mathbb{R}^N$ 定义如下：\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "\\phi_e = \\ln(\\theta_e)\n",
+    "\\qquad \\text{and} \\qquad\n",
+    "z_{t,e} =\\begin{cases}\n",
+    "\\ln(y_{t,e}) \\qquad & \\text{if } e \\in x_t \\\\\n",
+    "0 \\qquad & \\text{otherwise.}\n",
+    "\\end{cases}\n",
+    "\\end{equation*}\n",
+    "$$\n",
+    "\n",
+    "定义一个 $|x_t| \\times |x_t|$ 的协方差矩阵 $\\tilde{\\Sigma}$ ，其元素为: \n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "\\tilde{\\Sigma}_{e,e'} = \\begin{cases}\n",
+    "\\tilde{\\sigma}^2 \\qquad & \\text{for } e=e' \\\\\n",
+    "2 \\tilde{\\sigma}^2/3 \\qquad & \\text{for } e \\neq e', \\ell(e) = \\ell(e') \\\\\n",
+    "\\tilde{\\sigma}^2/3 \\qquad & \\text{otherwise,}\n",
+    "\\end{cases}\n",
+    "\\end{equation*}\n",
+    "$$\n",
+    "\n",
+    "其中$e,e' \\in x_t$ 。\n",
+    "\n",
+    "$N \\times N$的精度矩阵(concentration matrix):\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "\\tilde{C}_{e,e'} = \\begin{cases}\n",
+    "\\tilde{\\Sigma}^{-1}_{e,e'} \\qquad & \\text{if } e, e' \\in x_t\\\\\n",
+    "0 \\qquad & \\text{otherwise,}\n",
+    "\\end{cases}\n",
+    "\\end{equation*}\n",
+    "$$\n",
+    "其中$e,e' \\in E$ 。\n",
+    "\n",
+    "$\\phi$ 的后验分布是高斯的，均值向量为 $μ$ 和协方差矩阵为 $Σ$，并根据以下公式更新：\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "(\\mu, \\Sigma) \\leftarrow \\left( \\left(\\Sigma^{-1} + \\tilde{C} \\right)^{-1} \\left(\\Sigma^{-1} \\mu + \\tilde{C} z_t\\right),  \\left(\\Sigma^{-1} + \\tilde{C}\\right)^{-1}\\right) \\tag{4.4}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "TS算法也可以高效的计算方式应用：每个 $t$ 的迭代从后验参数 $\\mu \\in \\Re^N$ 和  $\\Sigma\\in \\Re^{N\\times N}$ 开始。 首先从均值为 $\\mu$ 、协方差矩阵为 $\\Sigma$ 的高斯分布中抽出一个向量 $\\hat{\\theta}$ ，然后为每个$e \\in E$ 设定 $hat{theta}_e = \\hat{phi}_e$，从而抽取样本 $\\hat{\\theta}$。 选择一个动作 $x$ 来最大化 $\\mathbb{E}_{q_{\\hat{\\theta}}}[r(y_t) | x_t = x] = -\\sum_{e \\in x_t} \\hat{\\theta}_e$ ，使用Djikstra算法或其他算法。在应用选定的行动后，观察到结果$y_t$，并根据公式（4.4）更新belief分布参数 $(\\mu, \\Sigma)$ 。"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.764714315035486"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "mu0 = 2\n",
+    "\n",
+    "sigma0 = 1\n",
+    "distance = np.exp(mu0 +sigma0 * np.random.randn())\n",
+    "distance"
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +281,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
