--- a/02-academic-intro/03 Thompson Sampling1.ipynb
+++ b/02-academic-intro/03 Thompson Sampling1.ipynb
@@ -13,7 +13,56 @@
     "\n",
     "2. [ts_tutorial](https://github.com/iosband/ts_tutorial)\n",
     "\n",
-    "3. [在线学习(MAB)与强化学习(RL)[4]：贝叶斯Bandit算法](https://zhuanlan.zhihu.com/p/55254900)\n"
+    "3. [在线学习(MAB)与强化学习(RL)[4]：贝叶斯Bandit算法](https://zhuanlan.zhihu.com/p/55254900)\n",
+    "\n",
+    "4. [概率分布之共轭分布](https://blog.csdn.net/jteng/article/details/61932891)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数学知识\n",
+    "\n",
+    "### 贝叶斯公式\n",
+    "\n",
+    "针对两个随机变量，联合概率分布具有两种分解形式\n",
+    "$$\n",
+    "P(x,y)=P(x|y)P(y)=P(y|x)P(x)\n",
+    "$$\n",
+    "因此，利用上式得到贝叶斯公式\n",
+    "\n",
+    "$$\n",
+    "P(c|x)=\\frac{P(x|c)P(c)}{P(x)}\n",
+    "$$\n",
+    "\n",
+    "通过贝叶斯公式得到贝叶斯决策理论基本思想：\n",
+    "\n",
+    "1️⃣ 已知**类条件概率**密度参数表达式$P(x|c)$和**先验概率**$P(c)$\n",
+    "\n",
+    "2️⃣ 利用贝叶斯公式转换成**后验概率**\n",
+    "\n",
+    "3️⃣ 根据后验概率大小进行决策分类\n",
+    "\n",
+    "> **先验概率（prior probability）**：指根据以往经验和分析。在实验或采样前就可以得到的概率。\n",
+    ">\n",
+    "> **后验概率（posterior probability）**：指某件事已经发生，想要计算这件事发生的原因是由某个因素引起的概率。\n",
+    ">\n",
+    "> **类条件概率密度**是，假定x是一个连续随机变量，其分布取决于类别状态，表示成p(x|ω)的形式，这就是“类条件概率密度”函数，即**类别状态为ω时的x的**[概率密度函数](https://baike.baidu.com/item/概率密度函数/5021996)（有时也称为状态条件概率密度）。\n",
+    "\n",
+    "### 共轭分布\n",
+    "\n",
+    "共轭分布(conjugate distribution)的概率中一共涉及到三个分布：先验、似然和后验，如果由先验分布和似然分布所确定的后验分布与该先验分布属于同一种类型的分布，则该先验分布为似然分布的共轭分布，也称为共轭先验。\n",
+    "\n",
+    "假设变量 $x$ 服从分布 $P(x|\\theta)$ ，其观测样本为 $X=\\{x_1,x_2,...,x_m\\}$，参数 $\\theta$ 服从先验分布 $\\prod(\\theta)$，那么后验分布为：\n",
+    "$$\n",
+    "P(\\theta|X) = \\frac{\\prod(\\theta)P(X|\\theta)}{P(X)}\n",
+    "$$\n",
+    "\n",
+    "如果后验分布 $P(\\theta|X)$ 与先验分布 $\\prod(\\theta)$ 是同种类型的分布，则称先验分布 $\\prod(\\theta)$ 为似然分布 $P(X|\\theta)$ 的共轭分布。\n",
+    "\n",
+    "比较常用的几个例子有：高斯分布是高斯分布的共轭分布，Beta分布是二项分布的共轭分布，Dirichlet分布是多项分布的共轭分布。"
    ]
   },
   {
@@ -625,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
