--- a/02-academic-intro/abandomed.ipynb
+++ b/02-academic-intro/abandomed.ipynb
@@ -249,28 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7.764714315035486"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 0 0 0]\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "mu0 = 2\n",
-    "\n",
-    "sigma0 = 1\n",
-    "distance = np.exp(mu0 +sigma0 * np.random.randn())\n",
-    "distance"
+    "print(np.random.binomial(1,max(0,1/(7-1)),7))"
    ]
   }
  ],
