--- a/02-academic-intro/06 Thompson Sampling4.ipynb
+++ b/02-academic-intro/06 Thompson Sampling4.ipynb
@@ -76,26 +76,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[[1 0 0]\n",
+      " [0 2 0]\n",
+      " [0 0 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.ones((3,3)))\n",
+    "print(np.diag([1,2,3]))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ts385",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.5 (default, Sep  3 2020, 21:29:08) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f782cbc35ee09a0463cea07452d2768e71217f53286386b2b03ce9f381fa73cf"
+    "hash": "5179d32cf6ec497baf3f8a3ef987cc77c5d2dc691fdde20a56316522f61a7323"
    }
   }
  },
